# gesture_prediction

./: .gitignore  README.md
random_forest_gesture_cpp/: CMakeLists.txt  Dockerfile  README.md
random_forest_gesture_cpp/src/: finetuning.cpp  generate_data.cpp  run.cpp  train.cpp
random_forest_gesture_py/: README.md  finetuning.py  generate_data.py  requirements.txt  run.py  train.py
